# python-selenium-mobile-web

./: .gitignore  README.md  pyproject.toml
config/: config.py
fixtures/: setup.py
helpers/: selenium_helpers.py
pages/: home_page.py  search_page.py  search_results_page.py  streamer_page.py
tests/: test_select_streamer.py
