[tool.poetry]
name = "python-selenium-mobile-web"
version = "0.1.0"
description = ""
authors = ["christiandpg <christian.goncalves@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.24.0"
pytest = "^7.4.2"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
pytest-xdist = "^3.3.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"